--- a/src/all.css
+++ b/src/all.css
@@ -8,7 +8,7 @@ body {
     padding: 0px;
     /* font-family: 'Rubik', sans-serif; */
     font-family: 'Poppins', sans-serif;
-
+    scroll-behavior:smooth;
     overflow-x: hidden;
 }
 
