--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -144,11 +144,13 @@ i {
 }
 
 .ktrUSer i {
+    cursor: pointer;
     font-size: 12px;
     margin-top: 3px;
 }
 
 .moon {
+    cursor: pointer;
     font-size: 22px;
     transform: rotate(-15deg);
 }
